--- a/SumoSmushSisters.CSharp.csproj
+++ b/SumoSmushSisters.CSharp.csproj
@@ -72,7 +72,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Animator1.cs" />
     <Compile Include="Assets\CamCon.cs" />
+    <Compile Include="Assets\HitScript.cs" />
+    <Compile Include="Assets\MM.cs" />
     <Compile Include="Assets\PlayerCon.cs" />
   </ItemGroup>
   <ItemGroup>
